--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "dependencies": {
     "@rails/webpacker": "^4.0.2",
     "bootstrap": "^4.3.1",
+    "bootstrap-slider": "^10.6.1",
     "jquery": "^3.4.1",
-    "mapbox-gl": "^1.0.0",
     "jquery-bar-rating": "^1.2.2",
+    "mapbox-gl": "^1.0.0",
     "popper.js": "^1.15.0"
   },
   "devDependencies": {
