--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "CoolFit",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.4.0",
     "@rails/webpacker": "^4.0.2",
     "bootstrap": "^4.3.1",
     "bootstrap-slider": "^10.6.1",
